--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,10 @@
+# _________________ # 
+#|  _____________  |#
+#| | woland tmux | |#
+#| |_____________| |#
+#|_________________|#
+#                   #
+
 # Send prefix
 set-option -g prefix C-s
 unbind-key C-s
