--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,10 @@ bind-key h split-window -v
 
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
+
+# Set $TERM and force 256 colors.
+if "[[ $TERM =~ 256color]]" "
+    set -g default-terminal 'tmux-256color';
+    set -ga terminal-overrides ',tmux-256color:Tc' "
+
+
